MDL-74815 course: Fixed the color contrast in site homepage

--- a/theme/boost/scss/moodle/course.scss
+++ b/theme/boost/scss/moodle/course.scss
@@ -729,6 +729,11 @@ span.editinstructions {
         display: flex;
         align-items: center;
     }
+    .moreinfo {
+        .icon {
+            margin-right: 0;
+        }
+    }
 }
 
 #frontpage-available-course-list,
@@ -749,7 +754,6 @@ span.editinstructions {
 #frontpage-category-combo {
     .coursebox > .info > .coursename a {
         display: block;
-        background-image: url([[pix:moodle|i/course]]);
         background-repeat: no-repeat;
         padding-left: 21px;
         background-position: left 0.2em;
@@ -822,20 +826,6 @@ span.editinstructions {
     padding: 2px 18px;
 }
 
-.course_category_tree .category.with_children > .info > .categoryname {
-    background-image: url([[pix:moodle|t/expanded]]);
-    background-repeat: no-repeat;
-    background-position: center left;
-}
-
-.course_category_tree .category.with_children.collapsed > .info > .categoryname {
-    background-image: url([[pix:moodle|t/collapsed]]);
-}
-/* rtl:raw:
-.course_category_tree .category.with_children.collapsed > .info > .categoryname {
-    background-image:url([[pix:moodle|t/collapsed_rtl]]);
-}
-*/
 .course_category_tree .category.collapsed > .content {
     display: none;
 }
